	(ebuild-mode-licenses): New variable, initialise from license
	directory of Portage tree.
	(ebuild-mode-arch-list): Initialise from profile directory.
	(ebuild-mode-arch-stable-list): Variable removed.
	(ebuild-mode-insert-skeleton): Interactively ask for values.
	Move function behind mode definitions and completion code.
	(ebuild-mode-menu): Add ebuild-mode-insert-skeleton to menu.

2009-08-20  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-make-keywords-list): Increase
	max-specpdl-size to avoid an error in regexp-opt for Emacs 21.
	At present, a minimum value of 650 is needed (while it is only
	600 in Emacs 21).

2009-08-20  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-kde4-functions),
	(ebuild-mode-keywords-kde4-base),
	(ebuild-mode-keywords-kde4-meta): Add new functions for KDE 4
	eclasses

	* gentoo-syntax.el (ebuild-mode-insert-skeleton): Add new function
	which inserts a skeleton ebuild on C-c C-n.  Code example taken
	from exheres-mode written by Elias Pipping.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
	keywords from reworked python.eclass

2009-08-17  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
	(eselect-mode-font-lock-keywords): It is more efficient to collect
	all keywords for a font first, before computing their regexp.
	Thanks to Elias Pipping for pointing this out.
	(ebuild-mode-collect-equal-cdrs): New function.
	(ebuild-mode-make-keywords-list): Define also at compile time.

2009-08-16  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	python_makesym is not used anymore, thus remove

2009-08-15  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-config)
	(eselect-mode-keywords-core, eselect-mode-keywords-manip)
	(eselect-mode-keywords-multilib, eselect-mode-keywords-output)
	(eselect-mode-keywords-package-manager)